# Simple-Unit-Test-Library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SimpleUnitTestLibrary.sln  SimpleUnitTestLibrary.vcxproj  SimpleUnitTestLibrary.vcxproj.filters
Common/Util/: Uncopyable.h  Unmovable.h
Headers/: ResultType.h  TestSetData.h  UnitTest.h  UnitTestLogger.h  UnitTestResult.h  UnitTestRunner.h
Headers/Interfaces/: IUnitTestLogger.h
SimpleUnitTestLibrary/: SimpleUnitTestLibrary.vcxproj  SimpleUnitTestLibrary.vcxproj.filters  Test.cpp
SimpleUnitTestLibrary/Headers/: ResultType.h  SimpleUnitTestLibrary.Evaluators.h  SimpleUnitTestLibrary.Logger.h  SimpleUnitTestLibrary.Macros.h  SimpleUnitTestLibrary.Result.h  SimpleUnitTestLibrary.Runner.h  SimpleUnitTestLibrary.Suite.h  SimpleUnitTestLibrary.Test.h  SimpleUnitTestLibrary.Utils.h  SimpleUnitTestLibrary.h  TestQuantity.h  TestSetData.h  TestTypes.h  UnitTest.h  UnitTestLogger.h  UnitTestResult.h  UnitTestRunner.h
SimpleUnitTestLibrary/Modules/: SimpleUnitTestLibrary.Logger.cppm  SimpleUnitTestLibrary.Result.cppm  SimpleUnitTestLibrary.Runner.cppm  SimpleUnitTestLibrary.Suite.cppm  SimpleUnitTestLibrary.Test.cppm  SimpleUnitTestLibrary.Utils.cppm  SimpleUnitTestLibrary.cppm
SimpleUnitTestLibrary/Source/: ResultType.cpp  TestSetData.cpp  UnitTest.cpp  UnitTestLogger.cpp  UnitTestResult.cpp  UnitTestRunner.cpp
Source/: TestSetData.cpp  UnitTest.cpp  UnitTestLogger.cpp  UnitTestResult.cpp  UnitTestRunner.cpp
TemplateLibrary/: TemplateLibrary.sln
TemplateLibrary/TemplateLibrary/: Array.hpp  ArrayInterface.h  CountedPointer.hpp  DNode.hpp  DNodeInterface.h  DynamicArray.hpp  DynamicArrayInterface.h  (+16 more)
UnitTestLibrary/: UnitTestLibrary.sln
simple-logging-library/: .gitrepo
(+48 files in other folders)
